force-app/main/default/objects/MPA__c/MPA__c.object-meta.xml
<CustomObject>
    <description>Custom object to store Encirc&apos;s &quot;Mould Purchase Agreements&quot; (MPA)</description>
    <label>(SO-003) MPA form Rev 18</label>
    <nameField>
        <displayFormat>System MPA Number {00000}</displayFormat>
        <label>MPA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>