force-app/main/default/objects/MPA__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the Encirc Account Manager from list of all Encirc Salesforce Users</description>
    <inlineHelpText>Select the Encirc Account Manager from list of all Encirc Salesforce Users</inlineHelpText>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MPAs</relationshipName>
    <type>Lookup</type>
</CustomField>