force-app/main/default/objects/MPA__c/fields/Address_to_which_samples_should_be_sent__c.field-meta.xml
<CustomField>
    <fullName>Address_to_which_samples_should_be_sent__c</fullName>
    <inlineHelpText>For any European address please include the EIRO code</inlineHelpText>
    <label>Address to which samples should be sent</label>
    <type>TextArea</type>
</CustomField>