force-app/main/default/objects/MPA__c/fields/Agreed_Price_p_ths_Euros__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Price_p_ths_Euros__c</fullName>
    <description>Please use this field if the agreed price is Euros</description>
    <inlineHelpText>Please use this field if the agreed price is Euros</inlineHelpText>
    <label>Agreed Price p/ths (€ Euros)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>