force-app/main/default/objects/MPA__c/fields/Agreed_Price_p_ths_Sterling__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Price_p_ths_Sterling__c</fullName>
    <description>Please use this field if the agreed price is Sterling</description>
    <inlineHelpText>Please use this field if the agreed price is Sterling</inlineHelpText>
    <label>Agreed Price p/ths (£ Sterling)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>