force-app/main/default/objects/MPA__c/fields/Annual_Demand_000_s__c.field-meta.xml
<CustomField>
    <fullName>Annual_Demand_000_s__c</fullName>
    <label>Annual Demand (000&apos;s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>