force-app/main/default/objects/MPA__c/fields/Annual_Volume_000_s__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume_000_s__c</fullName>
    <description>Volume in thousands</description>
    <inlineHelpText>Volume in thousands</inlineHelpText>
    <label>Annual Volume (000&apos;s)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>