force-app/main/default/objects/MPA__c/fields/Any_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Any_Additional_Details__c</fullName>
    <label>Any Additional Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>