force-app/main/default/objects/MPA__c/fields/Approval_Owner__c.field-meta.xml
<CustomField>
    <fullName>Approval_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MS case 5806</description>
    <label>Approval Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MPAs4</relationshipName>
    <type>Lookup</type>
</CustomField>