force-app/main/default/objects/MPA__c/fields/Approval_Submited_By__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submited_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Submited By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MPAs5</relationshipName>
    <type>Lookup</type>
</CustomField>