force-app/main/default/objects/MPA__c/fields/Balance_Replacement_Equipment_Machine__c.field-meta.xml
<CustomField>
    <fullName>Balance_Replacement_Equipment_Machine__c</fullName>
    <label>Balance / Replacement Equipment Machine</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NIS</fullName>
            </value>
            <value>
                <fullName>AIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>