force-app/main/default/objects/MPA__c/fields/Capacity_ml__c.field-meta.xml
<CustomField>
    <fullName>Capacity_ml__c</fullName>
    <label>Capacity (ml)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>