force-app/main/default/objects/MPA__c/fields/Colour_of_Trial_Samples__c.field-meta.xml
<CustomField>
    <fullName>Colour_of_Trial_Samples__c</fullName>
    <label>Colour of Trial Samples</label>
    <length>255</length>
    <type>Text</type>
</CustomField>