force-app/main/default/objects/MPA__c/fields/Container_Pack_Banding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Container_Pack_Banding_Notes__c</fullName>
    <description>If it is possible that the container pack specification will require Banding please enter details</description>
    <inlineHelpText>If it is possible that the container pack specification will require Banding please enter details</inlineHelpText>
    <label>Container Pack Banding Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>