force-app/main/default/objects/MPA__c/fields/Container_Pack_Might_Require_Banding__c.field-meta.xml
<CustomField>
    <fullName>Container_Pack_Might_Require_Banding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it possible that this container pack specification will require Banding?</description>
    <inlineHelpText>Is it possible that this container pack specification will require Banding?</inlineHelpText>
    <label>Container Pack Might Require Banding</label>
    <type>Checkbox</type>
</CustomField>