force-app/main/default/objects/MPA__c/fields/Current_Stock_000_s__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock_000_s__c</fullName>
    <label>Current Stock (000&apos;s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>