force-app/main/default/objects/MPA__c/fields/Current_Stock_Coverage_weeks__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock_Coverage_weeks__c</fullName>
    <label>Current Stock Coverage (weeks)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>