force-app/main/default/objects/MPA__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master Account record for the customer</description>
    <inlineHelpText>Master Account record for the customer</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MPAs1</relationshipName>
    <type>Lookup</type>
</CustomField>