force-app/main/default/objects/MPA__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>MPAs</relationshipName>
    <type>Lookup</type>
</CustomField>