force-app/main/default/objects/MPA__c/fields/Customer_contact_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Customer_contact_phone_number__c</fullName>
    <label>Customer contact phone number</label>
    <type>Phone</type>
</CustomField>