force-app/main/default/objects/MPA__c/fields/Customer_Filling_Site__c.field-meta.xml
<CustomField>
    <fullName>Customer_Filling_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please select correct Account to reference the Customer Filling Site for this MPA</description>
    <inlineHelpText>Please select correct Account to reference the Customer Filling Site for this MPA</inlineHelpText>
    <label>Customer Filling Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MPAs</relationshipName>
    <type>Lookup</type>
</CustomField>