force-app/main/default/objects/MPA__c/fields/Customer_Intent_Analyse__c.field-meta.xml
<CustomField>
    <fullName>Customer_Intent_Analyse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Intent: Analyse</label>
    <type>Checkbox</type>
</CustomField>