force-app/main/default/objects/MPA__c/fields/Customer_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Number__c</fullName>
    <label>Customer Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>