force-app/main/default/objects/MPA__c/fields/Customer_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owner_Formula__c</fullName>
    <formula>Customer__r.Owner.FirstName + &apos; &apos; + Customer__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Owner</label>
    <type>Text</type>
</CustomField>