force-app/main/default/objects/MPA__c/fields/Customer_s_Written_Approval_Attached__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Written_Approval_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer&apos;s Written Approval Attached</label>
    <type>Checkbox</type>
</CustomField>