force-app/main/default/objects/MPA__c/fields/Date_for_Customer_Samples_Trial__c.field-meta.xml
<CustomField>
    <fullName>Date_for_Customer_Samples_Trial__c</fullName>
    <inlineHelpText>Date customer will run a trial on the samples sent to them</inlineHelpText>
    <label>Date for Customer Samples Trial</label>
    <type>Date</type>
</CustomField>