force-app/main/default/objects/MPA__c/fields/Deal_Sheet_Complete__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sheet_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Sheet Complete</label>
    <type>Checkbox</type>
</CustomField>