force-app/main/default/objects/MPA__c/fields/Decoration__c.field-meta.xml
<CustomField>
    <fullName>Decoration__c</fullName>
    <label>Decoration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>