force-app/main/default/objects/MPA__c/fields/Drawing__c.field-meta.xml
<CustomField>
    <fullName>Drawing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing</label>
    <referenceTo>Drawing__c</referenceTo>
    <relationshipLabel>MPAs</relationshipLabel>
    <relationshipName>MPAs</relationshipName>
    <type>Lookup</type>
</CustomField>