force-app/main/default/objects/MPA__c/fields/Drawing_Sketch_Number__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Sketch_Number__c</fullName>
    <label>Drawing Sketch Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>