force-app/main/default/objects/MPA__c/fields/Drawing_Trial_Type__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Trial_Type__c</fullName>
    <description>for reporting purposes</description>
    <formula>TEXT( Drawing__r.Trial_Data_Lookup__r.Trial_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawing Trial Type</label>
    <type>Text</type>
</CustomField>