force-app/main/default/objects/MPA__c/fields/Drawing_Type__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Type__c</fullName>
    <label>Drawing Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>