force-app/main/default/objects/MPA__c/fields/EG_Code__c.field-meta.xml
<CustomField>
    <fullName>EG_Code__c</fullName>
    <label>EG Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>