force-app/main/default/objects/MPA__c/fields/Enter_Previous_Bottle_Code__c.field-meta.xml
<CustomField>
    <fullName>Enter_Previous_Bottle_Code__c</fullName>
    <label>Enter Previous Bottle Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>