force-app/main/default/objects/MPA__c/fields/Est_Cost_of_Trial_Mould_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Est_Cost_of_Trial_Mould_Equipment__c</fullName>
    <label>Est. Cost of Trial Mould Equipment</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>