force-app/main/default/objects/MPA__c/fields/Est_Coverage_From_New_Set_weeks__c.field-meta.xml
<CustomField>
    <fullName>Est_Coverage_From_New_Set_weeks__c</fullName>
    <label>Est. Coverage From New Set (weeks)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>