force-app/main/default/objects/MPA__c/fields/Est_New_Mould_Costs__c.field-meta.xml
<CustomField>
    <fullName>Est_New_Mould_Costs__c</fullName>
    <label>Est. New Mould Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>