force-app/main/default/objects/MPA__c/fields/Est_Volume_From_New_Set__c.field-meta.xml
<CustomField>
    <fullName>Est_Volume_From_New_Set__c</fullName>
    <label>Est. Volume From New Set (000&apos;s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>