force-app/main/default/objects/MPA__c/fields/Estimated_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_delivery_date__c</fullName>
    <label>Estimated delivery date</label>
    <type>Date</type>
</CustomField>