force-app/main/default/objects/MPA__c/fields/Full_Production_Required__c.field-meta.xml
<CustomField>
    <fullName>Full_Production_Required__c</fullName>
    <description>Estimated date when full production would be required</description>
    <inlineHelpText>Estimated date when full production would be required</inlineHelpText>
    <label>Full Production Required</label>
    <type>Date</type>
</CustomField>