force-app/main/default/objects/MPA__c/fields/Full_Resort_Required__c.field-meta.xml
<CustomField>
    <fullName>Full_Resort_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Resort Required</label>
    <type>Checkbox</type>
</CustomField>