force-app/main/default/objects/MPA__c/fields/Hot_or_Cold_Filled__c.field-meta.xml
<CustomField>
    <fullName>Hot_or_Cold_Filled__c</fullName>
    <label>Hot or Cold Filled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>