force-app/main/default/objects/MPA__c/fields/Initial_Approval_Process_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Approval_Process_Submission_Date__c</fullName>
    <description>Field is updated from the Initial Submission Actions on all MPA Approval Processes</description>
    <label>Initial Approval Process Submission Date</label>
    <type>Date</type>
</CustomField>