force-app/main/default/objects/MPA__c/fields/Last_Approval_Update_date_time__c.field-meta.xml
<CustomField>
    <fullName>Last_Approval_Update_date_time__c</fullName>
    <label>Last Approval Update</label>
    <type>DateTime</type>
</CustomField>