force-app/main/default/objects/MPA__c/fields/Mould_Number__c.field-meta.xml
<CustomField>
    <fullName>Mould_Number__c</fullName>
    <label>Mould Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>