force-app/main/default/objects/MPA__c/fields/Mould_Type__c.field-meta.xml
<CustomField>
    <fullName>Mould_Type__c</fullName>
    <label>Mould Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIS SG</fullName>
            </value>
            <value>
                <fullName>AIS DG</fullName>
            </value>
            <value>
                <fullName>AIS Tandem</fullName>
            </value>
            <value>
                <fullName>AIS TG</fullName>
            </value>
            <value>
                <fullName>NIS DG</fullName>
            </value>
            <value>
                <fullName>NIS DG/TG</fullName>
            </value>
            <value>
                <fullName>NIS TG</fullName>
            </value>
            <value>
                <fullName>NIS QG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>