force-app/main/default/objects/MPA__c/fields/MPA_Auto_Number_Generator__c.field-meta.xml
<CustomField>
    <fullName>MPA_Auto_Number_Generator__c</fullName>
    <description>Field generates a sequential number for MPA records that is used in the unique &quot;MPA (MPTR) No.&quot; field. This field does not appear on any page layouts.</description>
    <displayFormat>{0000}</displayFormat>
    <label>MPA Auto Number Generator</label>
    <type>AutoNumber</type>
</CustomField>