force-app/main/default/objects/MPA__c/fields/MPA_MPTR_No__c.field-meta.xml
<CustomField>
    <fullName>MPA_MPTR_No__c</fullName>
    <description>Creates unique MPA number from last two digits of current FY plus the value of a separate auto number field</description>
    <formula>RIGHT(TEXT(YEAR( DATEVALUE(CreatedDate))),2) &amp; &quot; - &quot; &amp; MPA_Auto_Number_Generator__c</formula>
    <label>MPA (MPTR) No.</label>
    <type>Text</type>
</CustomField>