force-app/main/default/objects/MPA__c/fields/MPA_Notes__c.field-meta.xml
<CustomField>
    <fullName>MPA_Notes__c</fullName>
    <formula>&quot;Planning Comments:&quot;&amp; BR() &amp;
&quot;- If the replacement set of equipment differs from the original, ie: DG/TG instead of DG, planning must notify the account manager prior to ordering&quot;&amp; BR() &amp;
&quot;- Where possible all NIS DG jobs are to be designed NIS DG-TG with Triple Gob Quantities. This applies to both new and Replacement Equipment&quot;&amp; BR() &amp;
&quot;- If the annual volume for the container does not warrant Triple Gob Quantities then planning are to advise that only DG Quantities should be purchased&quot;&amp; BR() &amp;
BR() &amp;						
&quot;Mould Shop / Design Comments:&quot;&amp; BR() &amp;
&quot;- If moulds are paid for by the customer, then an order will only be placed after approval has been received from the customer&quot;&amp; BR() &amp;
&quot;- Mould order will only be placed if the customer&apos;s approval is attached to this form&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MPA Notes</label>
    <type>Text</type>
</CustomField>