force-app/main/default/objects/MPA__c/fields/New_Bottle__c.field-meta.xml
<CustomField>
    <fullName>New_Bottle__c</fullName>
    <label>New Bottle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>