force-app/main/default/objects/MPA__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other Available Mould Equipment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>