force-app/main/default/objects/MPA__c/fields/Packaging_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Requirements__c</fullName>
    <label>Packaging Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>