force-app/main/default/objects/MPA__c/fields/Pressurised__c.field-meta.xml
<CustomField>
    <fullName>Pressurised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pressurised</label>
    <type>Checkbox</type>
</CustomField>