force-app/main/default/objects/MPA__c/fields/Reason_For_Trial__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Trial__c</fullName>
    <label>Reason For Trial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>