force-app/main/default/objects/MPA__c/fields/Record_Approver_Finance_Department__c.field-meta.xml
<CustomField>
    <fullName>Record_Approver_Finance_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lease enter specific User who will be required to approve this MPA from the Finance Department</description>
    <inlineHelpText>lease enter specific User who will be required to approve this MPA from the Finance Department</inlineHelpText>
    <label>Record Approver: Finance Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Finance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>MPAs2</relationshipName>
    <type>Lookup</type>
</CustomField>