force-app/main/default/objects/MPA__c/fields/Record_Approver_Operations_Director__c.field-meta.xml
<CustomField>
    <fullName>Record_Approver_Operations_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please enter specific User who will be required to approve this MPA in the role of Operations Director</description>
    <inlineHelpText>Please enter specific User who will be required to approve this MPA in the role of Operations Director</inlineHelpText>
    <label>Record Approver: Operations Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MPAs1</relationshipName>
    <type>Lookup</type>
</CustomField>