force-app/main/default/objects/MPA__c/fields/Record_Approver_Planning_Department__c.field-meta.xml
<CustomField>
    <fullName>Record_Approver_Planning_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please enter specific User who will be required to approve this MPA from the Planning Department</description>
    <inlineHelpText>Please enter specific User who will be required to approve this MPA from the Planning Department</inlineHelpText>
    <label>Record Approver: Planning Department</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MPAs3</relationshipName>
    <type>Lookup</type>
</CustomField>