force-app/main/default/objects/MPA__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this MPA is related to a specific Opportunity please reference it here</description>
    <inlineHelpText>If this MPA is related to a specific Opportunity please reference it here</inlineHelpText>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>MPAs</relationshipName>
    <type>Lookup</type>
</CustomField>