force-app/main/default/objects/MPA__c/fields/Remaining_Mould_Life_Cover_weeks__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Mould_Life_Cover_weeks__c</fullName>
    <label>Remaining Mould Life Cover (weeks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>