force-app/main/default/objects/MPA__c/fields/Replacement_Equipment_No_Of_Sections__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Equipment_No_Of_Sections__c</fullName>
    <label>Replacement Equipment No. Of Sections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>