force-app/main/default/objects/MPA__c/fields/Sales_Organization_Text__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization_Text__c</fullName>
    <label>Sales Organization</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>