force-app/main/default/objects/MPA__c/fields/Total_Weeks_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Total_Weeks_Coverage__c</fullName>
    <formula>Current_Stock_Coverage_weeks__c  +  Remaining_Mould_Life_Cover_weeks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weeks Coverage</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>