force-app/main/default/objects/MPA__c/fields/Trial_Equipment_Config__c.field-meta.xml
<CustomField>
    <fullName>Trial_Equipment_Config__c</fullName>
    <label>Trial Equipment Config</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Gob</fullName>
            </value>
            <value>
                <fullName>Double Gob</fullName>
            </value>
            <value>
                <fullName>Double/Triple Gob</fullName>
            </value>
            <value>
                <fullName>Triple Gob</fullName>
            </value>
            <value>
                <fullName>Quad Gob</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>