force-app/main/default/objects/MPA__c/fields/Trial_Equipment_Machine_Type__c.field-meta.xml
<CustomField>
    <fullName>Trial_Equipment_Machine_Type__c</fullName>
    <label>Trial Equipment Machine Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NIS</fullName>
            </value>
            <value>
                <fullName>AIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>