force-app/main/default/objects/MPA__c/fields/Trial_Equipment_No_Of_Sections__c.field-meta.xml
<CustomField>
    <fullName>Trial_Equipment_No_Of_Sections__c</fullName>
    <label>Trial Equipment No. Of Sections</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>