force-app/main/default/objects/MPA__c/fields/Trial_Equipment_Plant__c.field-meta.xml
<CustomField>
    <fullName>Trial_Equipment_Plant__c</fullName>
    <label>Trial Equipment Plant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Derrylin</fullName>
            </value>
            <value>
                <fullName>Elton</fullName>
            </value>
            <value>
                <fullName>Corsico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>