force-app/main/default/objects/MPA__c/fields/Trial_Type__c.field-meta.xml
<CustomField>
    <fullName>Trial_Type__c</fullName>
    <description>updated via pb</description>
    <label>Trial Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>